fix: Fix mod proxy still using modLoadedPredicate too early even when buildLazily is used #136